syntax = "proto3";

option java_package = "org.sorapointa.proto";

message DoSetPlayerBornDataNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 176;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }
}
