syntax = "proto3";

option java_package = "org.sorapointa.proto";

message EnterSceneReadyRsp {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 251;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  uint32 enter_scene_token = 11;
  int32 retcode = 8;
}
