syntax = "proto3";

option java_package = "org.sorapointa.proto";

message FightPropPair {
  uint32 prop_type = 1;
  float prop_value = 2;
}
