syntax = "proto3";

option java_package = "org.sorapointa.proto";

enum FriendOnlineState {
  FRIEND_ONLINE_STATE_DISCONNECT = 0;
  FRIEND_ONLINE_STATE_ONLINE = 1;
}
