syntax = "proto3";

import "SocialDetail.proto";

option java_package = "org.sorapointa.proto";

message GetPlayerSocialDetailRsp {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 4057;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  SocialDetail detail_data = 6;
  int32 retcode = 14;
}
