syntax = "proto3";

option java_package = "org.sorapointa.proto";

message GetPlayerTokenReq {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 179;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  //   IS_ALLOW_CLIENT = 1;
  // }

  uint32 uid = 10;
  uint32 minors_reg_min_age = 1735;
  uint32 platform_type = 2;
  bool is_guest = 14;
  string online_id = 12;
  uint32 account_type = 6;
  uint32 channel_id = 8;
  string client_rand_key = 400;
  string account_ext = 3;
  uint32 lang = 1548;
  string psn_region = 13;
  uint32 cloud_client_ip = 1;
  string psn_id = 5;
  uint32 key_id = 1175;
  string account_uid = 4;
  string client_ip_str = 15;
  string account_token = 9;
  string country_code = 11;
  string birthday = 292;
  uint32 sub_channel_id = 7;
}
