syntax = "proto3";

option java_package = "org.sorapointa.proto";

message OpenStateUpdateNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 107;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  map<uint32, uint32> open_state_map = 12;
}
