syntax = "proto3";

option java_package = "org.sorapointa.proto";

message PingReq {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 100;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  //   IS_ALLOW_CLIENT = 1;
  // }

  uint32 client_time = 6;
  double total_tick_time = 9;
  float ue_time = 2;
  uint32 seq = 12;
  bytes sc_data = 3;
}
