syntax = "proto3";

option java_package = "org.sorapointa.proto";

message PingRsp {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 43;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  int32 retcode = 7;
  uint32 client_time = 10;
  uint32 seq = 15;
}
