syntax = "proto3";

import "PropValue.proto";

option java_package = "org.sorapointa.proto";

message PlayerDataNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 147;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  bool is_first_login_today = 12;
  string nick_name = 9;
  uint64 server_time = 1;
  map<uint32, PropValue> prop_map = 4;
  uint32 region_id = 2;
}
