syntax = "proto3";

import "EnterType.proto";
import "Vector.proto";

option java_package = "org.sorapointa.proto";

message PlayerEnterSceneNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 279;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  uint32 world_type = 1224;
  bool is_skip_ui = 32;
  uint32 world_level = 4;
  Vector pos = 1;
  bool is_first_login_enter_scene = 3;
  uint32 prev_scene_id = 13;
  uint32 enter_scene_token = 6;
  uint32 dungeon_id = 2;
  uint32 scene_id = 11;
  EnterType type = 12;
  repeated uint32 scene_tag_id_list = 5;
  uint64 scene_begin_time = 9;
  uint32 enter_reason = 287;
  uint32 target_uid = 8;
  Vector prev_pos = 10;
  string scene_transaction = 370;
}
