

syntax = "proto3";

import "PropValue.proto";

option java_package = "org.sorapointa.proto";

message PlayerPropNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 139;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  map<uint32, PropValue> prop_map = 1;
}
