syntax = "proto3";

option java_package = "org.sorapointa.proto";

message SceneInitFinishRsp {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 300;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  //   IS_ALLOW_CLIENT = 1;
  // }

  int32 retcode = 7;
  uint32 enter_scene_token = 4;
}
