syntax = "proto3";

option java_package = "org.sorapointa.proto";

message ServerDisconnectClientNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 152;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  uint32 data = 4;
}
