syntax = "proto3";

option java_package = "org.sorapointa.proto";

message ServerTimeNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 57;
  //   ENET_CHANNEL_ID = 1;
  //   ENET_IS_RELIABLE = 1;
  // }

  uint64 server_time = 13;
}
