syntax = "proto3";

option java_package = "org.sorapointa.proto";

message SetPlayerBornDataRsp {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 190;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  int32 retcode = 15;
}
