syntax = "proto3";

import "StoreType.proto";

option java_package = "org.sorapointa.proto";

message StoreWeightLimitNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 630;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  uint32 reliquary_count_limit = 14;
  uint32 furniture_count_limit = 10;
  uint32 material_count_limit = 5;
  uint32 weapon_count_limit = 1;
  uint32 weight_limit = 8;
  StoreType store_type = 9;
}
